--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@ h2 span {
                 <div class="col-md-6 text-center ftco-animate">
                     <!-- Download CV Button -->
                     <p>
-                        <a href="https://drive.google.com/file/d/1aLc76ADugA7Qsqqi5gOsWj83Wsvbo0mW/view?usp=sharing" class="btn btn-primary py-3 px-4"
+                        <a href="https://drive.google.com/file/d/1xCdnXLlJWT-Va23O57SFu9PsiITjRcPg/view?usp=sharing" class="btn btn-primary py-3 px-4"
                             style="position: relative; display: inline-block; text-decoration: none;color: #fff; padding: 10px 20px;"
                             onmouseover="this.style.boxShadow='0 0 20px #fff, 0 0 30px #ff007f, 0 0 40px #ff007f, 0 0 50px #ff007f, 0 0 60px #ff007f, 0 0 70px #ff007f'; this.style.textDecoration='none'; this.style.color='#fff';"
                             onmouseout="this.style.boxShadow='none';">
@@ -1342,7 +1342,7 @@ h2 span {
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div 
                     class="align-self-stretch box p-4 text-center" 
-                    style="transition: all 0.3s ease;"
+                    style="transition: all 0.3s ease; border-radius: 30px;"
                     onmouseover="this.style.boxShadow='0 0 50px rgba(0, 123, 255, 0.7)'; this.style.transform='scale(1.1)';"
                     onmouseout="this.style.boxShadow='none'; this.style.transform='scale(1)';"
                 >
@@ -1359,7 +1359,7 @@ h2 span {
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div 
                     class="align-self-stretch box p-4 text-center" 
-                    style="transition: all 0.3s ease;"
+                    style="transition: all 0.3s ease;border-radius: 30px;"
                     onmouseover="this.style.boxShadow='0 0 50px rgba(0, 123, 255, 0.7)'; this.style.transform='scale(1.05)';"
                     onmouseout="this.style.boxShadow='none'; this.style.transform='scale(1)';"
                 >
@@ -1375,7 +1375,7 @@ h2 span {
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div 
                     class="align-self-stretch box p-4 text-center" 
-                    style="transition: all 0.3s ease;"
+                    style="transition: all 0.3s ease;border-radius: 30px;"
                     onmouseover="this.style.boxShadow='0 0 50px rgba(0, 123, 255, 0.7)'; this.style.transform='scale(1.05)';"
                     onmouseout="this.style.boxShadow='none'; this.style.transform='scale(1)';"
                 >
@@ -1391,7 +1391,7 @@ h2 span {
             <div class="col-md-6 col-lg-3 d-flex ftco-animate">
                 <div 
                     class="align-self-stretch box p-4 text-center" 
-                    style="transition: all 0.3s ease;"
+                    style="transition: all 0.3s ease;border-radius: 30px;"
                     onmouseover="this.style.boxShadow='0 0 50px rgba(0, 123, 255, 0.7)'; this.style.transform='scale(1.05)';"
                     onmouseout="this.style.boxShadow='none'; this.style.transform='scale(1)';"
                 >
@@ -1401,7 +1401,7 @@ h2 span {
                     <h3 class="mb-4">Download Resume</h3>
                     <p>
                         <a 
-                            href="https://drive.google.com/file/d/1aLc76ADugA7Qsqqi5gOsWj83Wsvbo0mW/view?usp=sharing" 
+                            href="https://drive.google.com/file/d/1xCdnXLlJWT-Va23O57SFu9PsiITjRcPg/view?usp=sharing" 
                             style="text-decoration: none; color: #007bff; transition: all 0.3s ease;"
                             onmouseover="this.style.textShadow='0 0 50px rgba(0, 123, 255, 0.7)';" 
                             onmouseout="this.style.textShadow='none';"
