--- a/index.html
+++ b/index.html
@@ -1502,19 +1502,19 @@ h2 span {
                 <div class="rating" style="display: inline-block;">
                     <!-- Star icons with onclick events to set ratings -->
                     <a href="#" onclick="setRating(1)" style="text-decoration: none;">
-                        <span class="fa fa-star" data-rating="1" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 5s infinite;"></span>
+                        <span class="fa fa-star" data-rating="1" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 4s infinite;"></span>
                     </a>
                     <a href="#" onclick="setRating(2)" style="text-decoration: none;">
-                        <span class="fa fa-star" data-rating="2" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 3s infinite;"></span>
+                        <span class="fa fa-star" data-rating="2" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 2s infinite;"></span>
                     </a>
                     <a href="#" onclick="setRating(3)" style="text-decoration: none;">
-                        <span class="fa fa-star" data-rating="3" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 5s infinite;"></span>
+                        <span class="fa fa-star" data-rating="3" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 3s infinite;"></span>
                     </a>
                     <a href="#" onclick="setRating(4)" style="text-decoration: none;">
-                        <span class="fa fa-star" data-rating="4" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 3s infinite;"></span>
+                        <span class="fa fa-star" data-rating="4" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 2s infinite;"></span>
                     </a>
                     <a href="#" onclick="setRating(5)" style="text-decoration: none;">
-                        <span class="fa fa-star" data-rating="5" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 5s infinite;"></span>
+                        <span class="fa fa-star" data-rating="5" style="font-size: 4rem; color: #ccc; transition: color 0.3s, text-shadow 0.3s, transform 0.3s; display: inline-block; cursor: pointer; animation: floating 4s infinite;"></span>
                     </a>
                 </div>
                 <br><br><br>
@@ -1557,7 +1557,9 @@ h2 span {
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                     Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
                     <i class="icon-heart color-danger" aria-hidden="true"></i> by 
-                    <a href="https:" target="_blank"> @ Mr.Vishalpatil</a>
+                    <div class="row">
+                    </div>
+                    <a style = " color: white;" href="https:" target="_blank"> @ Mr.Vishalpatil</a>
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                 </p>
             </div>
