--- a/index.html
+++ b/index.html
@@ -1555,7 +1555,10 @@ h2 span {
             <div class="col-md-12 text-center ">
                 <p class="glowing-text">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved 
+                    Copyright &copy; 
+                    <script>
+                             document.write(new Date().getFullYear());
+                    </script> All rights reserved 
                     <i class="icon-heart color-danger" aria-hidden="true"></i> by 
                     <div class="row">
                     </div>
