--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ h2 span {
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target glass-effects" id="ftco-navbar">
 	<div class="container">
 	  <!-- Navbar Brand -->
-	  <a class="navbar-brand" href="index.html">Portfolio </a>
+	  <a class="navbar-brand" href="index.html">Wel - Come </a>
   
 	  <!-- Navbar Toggler for Mobile -->
 	  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
