--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ h2 span {
 
                         <!-- Button for GitHub -->
                         <div style="text-align: center;">
-                            <a href="https://github.com/Vishal-sawnat-16" class="btn btn-primary py-3 px-4" style="position: relative; display: inline-block; text-decoration: none; color: #fff; padding: 10px 20px;"
+                            <a href="https://github.com/Vishal-patil-16" class="btn btn-primary py-3 px-4" style="position: relative; display: inline-block; text-decoration: none; color: #fff; padding: 10px 20px;"
                                 onmouseover="this.style.boxShadow='0 0 20px #fff, 0 0 30px #ff007f, 0 0 40px #ff007f, 0 0 50px #ff007f, 0 0 60px #ff007f, 0 0 70px #ff007f'; this.style.textDecoration='none'; this.style.color='#fff';"
                                 onmouseout="this.style.boxShadow='none';">
                                 Github
@@ -1138,11 +1138,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
                         style="background-image: url('images/doc.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Online Document
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Online Document
                                 Sharing System</a></h3>
                         <p>Designed and implemented an efficient Online Document Sharing System using HTML, CSS, Bootstrap,
                             PHP, Node.js, and MySQL.</p>
@@ -1156,11 +1156,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
                         style="background-image: url('images/face.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Face Recognition
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Face Recognition
                                 System for Attendance Management</a></h3>
                         <p>Developed a Face Recognition System for Attendance Management using Python, OpenCV, TensorFlow,
                             and dlib.</p>
@@ -1174,11 +1174,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-sawnat-16?tab=repositories" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
                         style="background-image: url('images/exam.jfif');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Exam Portal</a>
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Exam Portal</a>
                         </h3>
                         <p>Created an advanced exam portal using Spring Boot and Angular, showcasing proficiency in
                             full-stack development.</p>
@@ -1195,11 +1195,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-sawnat-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
                         style="background-image: url('images/proj_1.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Tourism
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Tourism
                                 Software</a></h3>
                         <p>Engineered a comprehensive tourism software during MCA using HTML, CSS, JavaScript, Node.js, and
                             React.js for the front-end, coupled with MySQL for the backend; enhanced user interaction and
@@ -1214,11 +1214,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-sawnat-16?tab=repositories" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
                         style="background-image: url('images/coch.jfif');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-sawnat-16?tab=repositories">Online Coaching
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Online Coaching
                                 Courses</a></h3>
                         <p>Developed a Python-based web app at Numentry Technology with a team, using Flask, Django, and
                             SQLite, integrating user authentication and course booking functionalities with RESTful API
@@ -1304,7 +1304,7 @@ h2 span {
 
         <!-- Github Button -->
         <a   
-            href="https://github.com/Vishal-sawnat-16?tab=repositories"   
+            href="https://github.com/Vishal-patil-16?tab=repositories"   
             class="btn btn-primary- py-3 px-5"   
             style="color: white; background-color: #007bff; border: none; border-radius: 30px; text-decoration: none; transition: all 0.3s ease; box-shadow: 0 0 50px rgba(255, 252, 252, 0.811); display: inline-block;"
             onmouseover="this.style.backgroundColor='#0056b3'; this.style.boxShadow='0 0 20px rgba(0, 123, 255, 0.7)';"   
