--- a/index.html
+++ b/index.html
@@ -1196,11 +1196,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16/Turisum_Web-" class="block-20 zoom-effect"
                         style="background-image: url('images/proj_1.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Tourism
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Turisum_Web-">Tourism
                                 Software</a></h3>
                         <p>Engineered a comprehensive tourism software during MCA using HTML, CSS, JavaScript, Node.js, and
                             React.js for the front-end, coupled with MySQL for the backend; enhanced user interaction and
