--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ h2 span {
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target glass-effects" id="ftco-navbar">
 	<div class="container">
 	  <!-- Navbar Brand -->
-	  <a class="navbar-brand" href="index.html">Wel - Come </a>
+	  <a class="navbar-brand" href="index.html">Wel - Come... </a>
   
 	  <!-- Navbar Toggler for Mobile -->
 	  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -1143,7 +1143,7 @@ h2 span {
                         style="background-image: url('images/doc.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Online Document
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Online-Documen-Sharing-System">Online Document
                                 Sharing System</a></h3>
                         <p>Designed and implemented an efficient Online Document Sharing System using HTML, CSS, Bootstrap,
                             PHP, Node.js, and MySQL.</p>
