--- a/index.html
+++ b/index.html
@@ -1139,7 +1139,7 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16/Online-Documen-Sharing-System" class="block-20 zoom-effect"
                         style="background-image: url('images/doc.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
@@ -1157,11 +1157,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16/Face-Recognition-System" class="block-20 zoom-effect"
                         style="background-image: url('images/face.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Face Recognition
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Face-Recognition-System">Face Recognition
                                 System for Attendance Management</a></h3>
                         <p>Developed a Face Recognition System for Attendance Management using Python, OpenCV, TensorFlow,
                             and dlib.</p>
@@ -1175,11 +1175,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16/Exam-Portal" class="block-20 zoom-effect"
                         style="background-image: url('images/exam.jfif');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Exam Portal</a>
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Exam-Portal">Exam Portal</a>
                         </h3>
                         <p>Created an advanced exam portal using Spring Boot and Angular, showcasing proficiency in
                             full-stack development.</p>
@@ -1215,11 +1215,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16" class="block-20 zoom-effect"
+                    <a href="https://github.com/Vishal-patil-16/Online-Coaching-Courses" class="block-20 zoom-effect"
                         style="background-image: url('images/coch.jfif');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16?tab=repositories">Online Coaching
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Online-Coaching-Courses">Online Coaching
                                 Courses</a></h3>
                         <p>Developed a Python-based web app at Numentry Technology with a team, using Flask, Django, and
                             SQLite, integrating user authentication and course booking functionalities with RESTful API
