--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ h2 span {
 @media (max-width: 768px) {
   .col-md-6 {
     flex: 0 0 80%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
