--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ h2 span {
 <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target glass-effects" id="ftco-navbar">
 	<div class="container">
 	  <!-- Navbar Brand -->
-	  <a class="navbar-brand" href="index.html">Wel - Come... </a>
+	  <a class="navbar-brand" href="index.html">Wel - Come  </a>
   
 	  <!-- Navbar Toggler for Mobile -->
 	  <button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
@@ -319,7 +319,7 @@ h2 span {
   
 		  <!-- Example Br and Underline -->
 		  <br>
-		  <div class="underline"></div>
+		  <!--<div class="underline"></div> -->
 		</ul>
 	  </div>
 	</div>
@@ -368,7 +368,7 @@ h2 span {
                                     <!-- Vertical spacing for content -->
                                     <br><br><br><br><br><br><br>
                                     <!-- Subheading -->
-                                    <span class="subheading"><h3>Hello!</h3></span>
+                                    <span class="subheading"><h3>Hello! </h3></span>
                                     <!-- Main heading with glowing effect -->
                                     <h2 class="mb-4 mt-3">
                                         <span id="name-glow" style="color: #ff9800; text-shadow: 0 0 5px #ff5900, 0 0 20px #008cffe0,0 0 30px #dcddde; position: relative; display: inline-block; font-size: 2em; animation: floating 3s infinite; font-family: Georgia, serif;">
