--- a/index.html
+++ b/index.html
@@ -1231,6 +1231,23 @@ h2 span {
                     </div>
                 </div>
             </div>
+
+            <!-- Project 6 -->
+            <div class="col-md-4 d-flex ftco-animate">
+                <div class="blog-entry"
+                    style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
+                    onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
+                    onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
+                    <a href="https://vishal-patil-16.github.io/Marketing/#about" class="block-20 zoom-effect"
+                        style="background-image: url('images/lending.png');">
+                    </a>
+                    <div class="text mt-3 float-right d-block">
+                        <h3 class="heading"><a href="https://vishal-patil-16.github.io/Marketing/#about">Lading Page Of Numentry Technologies
+                        </a></h3>
+                        <p>The Numentry Technologies landing page is a sleek, modern web interface showcasing the company's expertise in numeracy-focused software solutions. It features a clean layout with compelling content, responsive design, and strategic call-to-action elements that effectively communicate Numentry's innovative approach to data analysis and numerical processing.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
