--- a/index.html
+++ b/index.html
@@ -1244,7 +1244,7 @@ h2 span {
                     <div class="text mt-3 float-right d-block">
                         <h3 class="heading"><a href="https://vishal-patil-16.github.io/Marketing/#about">Lading Page Of Numentry Technologies
                         </a></h3>
-                        <p>The Numentry Technologies landing page is a sleek, modern web interface showcasing the company's expertise in numeracy-focused software solutions. It features a clean layout with compelling content, responsive design, and strategic call-to-action elements that effectively communicate Numentry's innovative approach to data analysis and numerical processing.</p>
+                        <p>The Numentry Technologies landing page is a sleek, modern interface showcasing the company's expertise in numetry-focused software solutions. It features a clean layout, compelling content, and responsive design that effectively communicates Numentry's innovative approach to data analysis.</p>
                     </div>
                 </div>
             </div>
