--- a/index.html
+++ b/index.html
@@ -1059,7 +1059,7 @@ h2 span {
                         <div class="resume-wrap ftco-animate" style="transition: box-shadow 0.3s;border-radius: 20px;">
                             <span class="date">2022 - 2024</span>
                             <h2>Master of Computer Application</h2>
-                            <span class="position">R.C. Patel Edu Trusts Institute of Management Research and  <br> Development</span>
+                            <span class="position">R.C. Patel Edu Trusts Institute of Management Research <br> and Development</span>
                             <p class="mt-4">Shirpur</p>
                         </div>
                     </div>
@@ -1143,11 +1143,11 @@ h2 span {
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
                     onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
                     onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16/Online-Documen-Sharing-System" class="block-20 zoom-effect"
+                    <a href="https://vishal-patil-16.github.io/Online-Documen-Sharing-System/" class="block-20 zoom-effect"
                         style="background-image: url('images/doc.jpg');">
                     </a>
                     <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Online-Documen-Sharing-System">Online Document
+                        <h3 class="heading"><a href="https://vishal-patil-16.github.io/Online-Documen-Sharing-System/">Online Document
                                 Sharing System</a></h3>
                         <p>Designed and implemented an efficient Online Document Sharing System using HTML, CSS, Bootstrap,
                             PHP, Node.js, and MySQL.</p>
