--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ h2 span {
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-							<span>C++</span> <span class="pull-right"></span>
+							        <span>C++</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -746,6 +746,18 @@ h2 span {
 									<span>Git & Git Hub</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
+
+                                    <span>AWS</span> <span class="pull-right"></span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
+
+                                    <span>Sealceforce</span> <span class="pull-right"></span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 
@@ -1137,6 +1149,24 @@ h2 span {
 
         <!-- Project Items -->
         <div class="row d-flex">
+
+            <!-- Project 6 -->
+            <div class="col-md-4 d-flex ftco-animate">
+                <div class="blog-entry"
+                    style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
+                    onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
+                    onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
+                    <a href="https://vishal-patil-16.github.io/Marketing/#about" class="block-20 zoom-effect"
+                        style="background-image: url('images/lending.png');">
+                    </a>
+                    <div class="text mt-3 float-right d-block">
+                        <h3 class="heading"><a href="https://vishal-patil-16.github.io/Marketing/#about">Lading Page Of Numentry Technologies
+                        </a></h3>
+                        <p>The Numentry Technologies landing page is a sleek, modern interface showcasing the company's expertise in numetry-focused software solutions. It features a clean layout, compelling content, and responsive design that effectively communicates Numentry's innovative approach to data analysis.</p>
+                    </div>
+                </div>
+            </div>
+            
             <!-- Project 1 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
