--- a/index.html
+++ b/index.html
@@ -675,7 +675,7 @@ h2 span {
                                     <p><span class="title-s">Name: </span> <span>Vishal D. Patil</span></p>
                                     <p><span class="title-s">Job Role: </span> <span>Full Stack Developer</span></p>
                                     <p><span class="title-s">Email: </span> <span>vishup3232@.com</span></p>
-                                    <p><span class="title-s">Experience: </span> <span>13 Months (Intern)</span></p>
+                                    <p><span class="title-s">Experience: </span> <span> 2 Years</span></p>
                                     <p><span class="title-s">Address: </span> <span>Jalgaon, Maharashtra</span></p>
                                     <p><span class="title-s">Phone: </span> <span>+91 7083323299</span></p>
                                 </div>
@@ -732,6 +732,12 @@ h2 span {
 											aria-valuemax="100"></div>
 									</div>
 
+                                    <span>Figma</span> <span class="pull-right"></span>
+									<div class="progress">
+										<div class="progress-bar" role="progressbar" style="width: 90%;" aria-valuenow="90" aria-valuemin="0"
+											aria-valuemax="100"></div>
+									</div>
+
 									<span>SQL</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
@@ -755,7 +761,7 @@ h2 span {
 											aria-valuemax="100"></div>
 									</div>
 
-                                    <span>Sealceforce</span> <span class="pull-right"></span>
+                                    <span>salesforce</span> <span class="pull-right"></span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -1166,7 +1172,7 @@ h2 span {
                     </div>
                 </div>
             </div>
-            
+
             <!-- Project 1 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
