--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@ h2 span {
                             <!-- Repeat similar blocks for other skills -->
                         </div>
 
-                        <!-- Button for GitHub -->
+                        <!-- Button for GitHub 
                         <div style="text-align: center;">
                             
                             <a href="https://github.com/Vishal-patil-16" class="btn btn-primary py-3 px-4" style="position: relative; display: inline-block; text-decoration: none; color: #fff; padding: 10px 20px;"
@@ -805,7 +805,7 @@ h2 span {
                                 onmouseout="this.style.boxShadow='none';">
                                 Github
                             </a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
             </div>
@@ -1156,7 +1156,7 @@ h2 span {
         <!-- Project Items -->
         <div class="row d-flex">
 
-            <!-- Project 6 -->
+            <!-- Project 1 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
@@ -1173,7 +1173,7 @@ h2 span {
                 </div>
             </div>
 
-            <!-- Project 1 -->
+            <!-- Project 2 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
@@ -1191,7 +1191,7 @@ h2 span {
                 </div>
             </div>
             
-            <!-- Project 2 -->
+            <!-- Project 3 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
@@ -1209,7 +1209,7 @@ h2 span {
                 </div>
             </div>
 
-            <!-- Project 3 -->
+            <!-- Project 4 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
@@ -1230,7 +1230,7 @@ h2 span {
 
         <!-- Second Row of Project Items -->
         <div class="row d-flex">
-            <!-- Project 4 -->
+            <!-- Project 5 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
@@ -1249,7 +1249,7 @@ h2 span {
                 </div>
             </div>
 
-            <!-- Project 5 -->
+            <!-- Project 6 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry"
                     style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
@@ -1264,23 +1264,6 @@ h2 span {
                         <p>Developed a Python-based web app at Numentry Technology with a team, using Flask, Django, and
                             SQLite, integrating user authentication and course booking functionalities with RESTful API
                             principles. Additionally, utilized React.js for front-end development.</p>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Project 6 -->
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry"
-                    style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.874); transition: all 0.3s ease;"
-                    onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
-                    onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://vishal-patil-16.github.io/Marketing/#about" class="block-20 zoom-effect"
-                        style="background-image: url('images/lending.png');">
-                    </a>
-                    <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://vishal-patil-16.github.io/Marketing/#about">Lading Page Of Numentry Technologies
-                        </a></h3>
-                        <p>The Numentry Technologies landing page is a sleek, modern interface showcasing the company's expertise in numetry-focused software solutions. It features a clean layout, compelling content, and responsive design that effectively communicates Numentry's innovative approach to data analysis.</p>
                     </div>
                 </div>
             </div>
