--- a/index.html
+++ b/index.html
@@ -805,12 +805,11 @@ h2 span {
                                 onmouseout="this.style.boxShadow='none';">
                                 Github
                             </a>
-                            
+
                         </div>-->
                     </div>
                 </div>
             </div>
-            <br><br>
 
 
             <!-- Right Column with About Text and Statistics -->
@@ -1210,6 +1209,28 @@ h2 span {
                 </div>
             </div>
 
+            <!-- Project 4 
+            <div class="col-md-4 d-flex ftco-animate">
+                <div class="blog-entry"
+                    style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
+                    onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
+                    onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
+                    <a href="https://github.com/Vishal-patil-16/Exam-Portal" class="block-20 zoom-effect"
+                        style="background-image: url('images/exam.jfif');">
+                    </a>
+                    <div class="text mt-3 float-right d-block">
+                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Exam-Portal">Exam Portal</a>
+                        </h3>
+                        <p>Created an advanced exam portal using Spring Boot and Angular, showcasing proficiency in
+                            full-stack development.</p>
+                    </div>
+                </div>
+            </div>-->
+        </div>
+
+        <!-- Second Row of Project Items -->
+        <div class="row d-flex">
+
             <!-- Project 4 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry"
@@ -1227,10 +1248,7 @@ h2 span {
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Second Row of Project Items -->
-        <div class="row d-flex">
             <!-- Project 5 -->
             <div class="col-md-4 d-flex ftco-animate">
                 <div class="blog-entry justify-content-end"
