--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> !-->
 
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--<meta name="viewport" content="width=device-width, initial-scale=1">!-->
+    <meta name="viewport" content="width=1024, initial-scale=1">
+
     
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -1208,24 +1210,6 @@ h2 span {
                     </div>
                 </div>
             </div>
-
-            <!-- Project 4 
-            <div class="col-md-4 d-flex ftco-animate">
-                <div class="blog-entry"
-                    style="background: rgba(39, 36, 36, 0.815); border-radius: 10px; padding: 20px; backdrop-filter: blur(10px); box-shadow: 0 4px 6px rgba(255, 247, 247, 0.41); transition: all 0.3s ease;"
-                    onmouseover="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41), 0 0 20px rgba(255, 255, 255, 0.9)'"
-                    onmouseout="this.style.boxShadow='0 4px 6px rgba(255, 247, 247, 0.41)'">
-                    <a href="https://github.com/Vishal-patil-16/Exam-Portal" class="block-20 zoom-effect"
-                        style="background-image: url('images/exam.jfif');">
-                    </a>
-                    <div class="text mt-3 float-right d-block">
-                        <h3 class="heading"><a href="https://github.com/Vishal-patil-16/Exam-Portal">Exam Portal</a>
-                        </h3>
-                        <p>Created an advanced exam portal using Spring Boot and Angular, showcasing proficiency in
-                            full-stack development.</p>
-                    </div>
-                </div>
-            </div>-->
         </div>
 
         <!-- Second Row of Project Items -->
